# postWizard-app-backend

./: .env.example  .gitignore  Dockerfile  README.md  ama_ai.py  deploy.sh  docker-compose.yaml  main.py  pyproject.toml  server.py  sm_handler.py
.github/workflows/: automation.yml  ci-cd.yaml
.postgres/: postmaster.pid
.postgres/base/1/: 1259  2619  2696
.postgres/base/16384/: 1247  1249  1259  16389  16392  16394  16395  16400  16401  16403  16404  2224  2579  2604  2606  2608  2610  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
.postgres/base/4/: 2619
.postgres/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
ai/: ama_ai_aws.py  ama_ai_google.py
alembic/: env.py
alembic/versions/: 2024_07_09_0013-1939ddffe821_initial_generation.py  2024_08_28_0746-0162302d4c94_alembic_revision.py  2024_08_28_0754-e914c8e2f525_relationship_maintend.py
app/: __init__.py  __main__.py  db.py  main.py  run_migration.py  settings.py
app/AI/: ama_ai_aws.py  ama_ai_google.py
app/Social_media_handler/: sm_handler.py  twitter.py
app/daos/: ai.py
app/models/: __init__.py  user.py
app/routers/: ai.py  api_router.py  user.py
app/services/: ai.py  user.py
app/utilities/: utils.py
playground/: gemini.py
social_media_handler/: linkedin.py
social_media_test/: linkedin_organization.py  linkedin_user.py  person_urn.py
static/: script.js  style.css
template/: home.html
